...
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
    </dependencies>
    <scenes>
        <!--Home-->
        <scene sceneID="hNz-n2-bh7">
            <objects>
                <viewController title="Home" id="9pv-A4-QxB" customClass="HomeController" customModule="Alpha" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="Ia1-K6-d13"/>
                        <viewControllerLayoutGuide type="bottom" id="4ug-Mw-9AY"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="tsR-hK-woN">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
...
                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                </variation>
                                <variation key="heightClass=compact-widthClass=regular">
                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                </variation>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WAV-kA-5yZ">
                                <rect key="frame" x="20" y="173" width="560" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="F7e-aO-uvE"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" secureTextEntry="YES"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ArO-aL-t9s">
                                <rect key="frame" x="20" y="223" width="560" height="45"/>
                                <color key="backgroundColor" red="0.0019097024370000001" green="0.6725537627" blue="0.0029630772110000002" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="45" id="lCc-lt-DEY"/>
                                </constraints>
                                <state key="normal" title="L O G I N">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                        <integer key="value" value="10"/>
                                    </userDefinedRuntimeAttribute>
...
            </objects>
            <point key="canvasLocation" x="-947" y="-530"/>
        </scene>
        <!--Elevation-->
        <scene sceneID="b0E-qa-nbG">
            <objects>
                <viewController title="Elevation" id="wJk-eQ-QqF" customClass="ElevationController" customModule="Alpha" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="dyh-Yl-vWB"/>
                        <viewControllerLayoutGuide type="bottom" id="BAC-nM-bOF"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="mMq-dB-xAu">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rKb-8H-NvA">
                                <rect key="frame" x="20" y="498" width="560" height="45"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="45" identifier="id1" id="HoN-r2-ywB"/>
                                </constraints>
                                <state key="normal" title="G E N E R A T E">
                                    <color key="titleColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
                                        <integer key="value" value="1"/>
                                    </userDefinedRuntimeAttribute>
...
            <point key="canvasLocation" x="-1315" y="987"/>
        </scene>
        <!--Theta View Controller-->
        <scene sceneID="0fA-hv-5Ju">
            <objects>
                <navigationController title="Theta View Controller" automaticallyAdjustsScrollViewInsets="NO" id="BqV-ot-j9w" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="Theta" image="icoTheta" id="Xbe-ck-I87">
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="color" keyPath="tintColor">
                                <color key="value" red="0.80000000000000004" green="0.25882352939999997" blue="0.31764705879999999" alpha="1" colorSpace="calibratedRGB"/>
                            </userDefinedRuntimeAttribute>
                        </userDefinedRuntimeAttributes>
                    </tabBarItem>
...
