...
    // @return: Error message pane on UX
    func displayErrorMessage(title : String, message : String)
    {
        // Create an alert with the passed values
        let alert = UIAlertController(title: title, message: message, preferredStyle: UIAlertControllerStyle.Alert);
        // Create the button title. We will keep this the same as it works with all issues
        alert.addAction(UIAlertAction(title: "Try Again", style: UIAlertActionStyle.Default, handler: nil));
        // Display the error message
        self.presentViewController(alert, animated: true, completion: nil);
    }
    
    // Action function to initiate login for a valid user. Directs the flow of the application
    // to the Tab Bar Controller
...
            if(error != nil)
            {
                
                // A message to let the user know their details were incorrect
                let message = "Your details are incorrect! :(\n please try again";
                // Send an alert letting the user know they have entered the wrong details
                self.displayErrorMessage("Incorrect Credentials", message: message);
                // Enable buttons and revert alpha transparenchy
                self.loginButton.enabled = true;
                self.registerHomebutton.enabled = true;
                self.loginButton.alpha = 1.0;
                self.registerHomebutton.alpha = 1.0;
                // Clear the text fields
...
